# thetadata-python

./: .gitignore  pyproject.toml
docs/terminal/: connection_methods.py
tests/: __init__.py  conf_test.py  conftest.py  test_client.py
tests/exceptions/: test_exceptions_passing.py
tests/indices/: test_indices_historical.py  test_indices_historical_price.py  test_indices_snapshots.py  test_indices_snapshots_ohlc.py  test_indices_snapshots_price.py
tests/lists_symbols_dates_more/: test_list_endpoints_passing.py
tests/options/: test_at_time.py  test_bulk_at_time.py
tests/stocks/: test_stocks_historical_eod_report.py  test_stocks_historical_ohlc.py  test_stocks_historical_quotes.py  test_stocks_historical_trades.py
thetadata/: __init__.py  client.py  enums.py  exceptions.py  handlers.py  inputs.py  literals.py  parsing.py  responses.py  terminal.py  utils.py
thetadata/models/: base.py  requests.py  responses.py
